// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code should render block code correctly (snapshot) 1`] = `
<div>
  <pre
    class="prism-code language-type block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        Block Code
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 1`] = `
<div>
  <pre
    class="prism-code language-html block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo = bar();
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 2`] = `
<div>
  <pre
    class="prism-code language-xml block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo = bar();
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 3`] = `
<div>
  <pre
    class="prism-code language-yml block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo = bar();
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 4`] = `
<div>
  <pre
    class="prism-code language-yaml block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo = bar();
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 5`] = `
<div>
  <pre
    class="prism-code language-css block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo = 
      </span>
      <span
        class="token function"
        style="color: rgb(166, 226, 45);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 6`] = `
<div>
  <pre
    class="prism-code language-json block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo = bar();
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 7`] = `
<div>
  <pre
    class="prism-code language-md block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo = bar();
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 8`] = `
<div>
  <pre
    class="prism-code language-markdown block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo = bar();
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 9`] = `
<div>
  <pre
    class="prism-code language-js block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token keyword"
        style="color: rgb(249, 38, 114);"
      >
        const
      </span>
      <span
        class="token plain"
      >
         foo 
      </span>
      <span
        class="token operator"
        style="color: rgb(167, 122, 254);"
      >
        =
      </span>
      <span
        class="token plain"
      >
         
      </span>
      <span
        class="token function"
        style="color: rgb(166, 226, 45);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 10`] = `
<div>
  <pre
    class="prism-code language-javascript block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token keyword"
        style="color: rgb(249, 38, 114);"
      >
        const
      </span>
      <span
        class="token plain"
      >
         foo 
      </span>
      <span
        class="token operator"
        style="color: rgb(167, 122, 254);"
      >
        =
      </span>
      <span
        class="token plain"
      >
         
      </span>
      <span
        class="token function"
        style="color: rgb(166, 226, 45);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 11`] = `
<div>
  <pre
    class="prism-code language-ts block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token keyword"
        style="color: rgb(249, 38, 114);"
      >
        const
      </span>
      <span
        class="token plain"
      >
         foo 
      </span>
      <span
        class="token operator"
        style="color: rgb(167, 122, 254);"
      >
        =
      </span>
      <span
        class="token plain"
      >
         
      </span>
      <span
        class="token function"
        style="color: rgb(166, 226, 45);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 12`] = `
<div>
  <pre
    class="prism-code language-typescript block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token keyword"
        style="color: rgb(249, 38, 114);"
      >
        const
      </span>
      <span
        class="token plain"
      >
         foo 
      </span>
      <span
        class="token operator"
        style="color: rgb(167, 122, 254);"
      >
        =
      </span>
      <span
        class="token plain"
      >
         
      </span>
      <span
        class="token function"
        style="color: rgb(166, 226, 45);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 13`] = `
<div>
  <pre
    class="prism-code language-coffee block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo 
      </span>
      <span
        class="token operator"
        style="color: rgb(167, 122, 254);"
      >
        =
      </span>
      <span
        class="token plain"
      >
         
      </span>
      <span
        class="token function"
        style="color: rgb(166, 226, 45);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 14`] = `
<div>
  <pre
    class="prism-code language-coffeescript block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo 
      </span>
      <span
        class="token operator"
        style="color: rgb(167, 122, 254);"
      >
        =
      </span>
      <span
        class="token plain"
      >
         
      </span>
      <span
        class="token function"
        style="color: rgb(166, 226, 45);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 15`] = `
<div>
  <pre
    class="prism-code language-jsx block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token keyword"
        style="color: rgb(249, 38, 114);"
      >
        const
      </span>
      <span
        class="token plain"
      >
         foo 
      </span>
      <span
        class="token operator"
        style="color: rgb(167, 122, 254);"
      >
        =
      </span>
      <span
        class="token plain"
      >
         
      </span>
      <span
        class="token function"
        style="color: rgb(166, 226, 45);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 16`] = `
<div>
  <pre
    class="prism-code language-tsx block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token keyword"
        style="color: rgb(249, 38, 114);"
      >
        const
      </span>
      <span
        class="token plain"
      >
         foo 
      </span>
      <span
        class="token operator"
        style="color: rgb(167, 122, 254);"
      >
        =
      </span>
      <span
        class="token plain"
      >
         
      </span>
      <span
        class="token function"
        style="color: rgb(166, 226, 45);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 17`] = `
<div>
  <pre
    class="prism-code language-objc block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token keyword"
        style="color: rgb(249, 38, 114);"
      >
        const
      </span>
      <span
        class="token plain"
      >
         foo 
      </span>
      <span
        class="token operator"
        style="color: rgb(167, 122, 254);"
      >
        =
      </span>
      <span
        class="token plain"
      >
         
      </span>
      <span
        class="token function"
        style="color: rgb(166, 226, 45);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 18`] = `
<div>
  <pre
    class="prism-code language-objectivec block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token keyword"
        style="color: rgb(249, 38, 114);"
      >
        const
      </span>
      <span
        class="token plain"
      >
         foo 
      </span>
      <span
        class="token operator"
        style="color: rgb(167, 122, 254);"
      >
        =
      </span>
      <span
        class="token plain"
      >
         
      </span>
      <span
        class="token function"
        style="color: rgb(166, 226, 45);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 19`] = `
<div>
  <pre
    class="prism-code language-vue block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo = bar();
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 20`] = `
<div>
  <pre
    class="prism-code language-go block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token keyword"
        style="color: rgb(249, 38, 114);"
      >
        const
      </span>
      <span
        class="token plain"
      >
         foo 
      </span>
      <span
        class="token operator"
        style="color: rgb(167, 122, 254);"
      >
        =
      </span>
      <span
        class="token plain"
      >
         
      </span>
      <span
        class="token function"
        style="color: rgb(166, 226, 45);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 21`] = `
<div>
  <pre
    class="prism-code language-java block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo = bar();
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 22`] = `
<div>
  <pre
    class="prism-code language-rust block"
    style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
  >
    <div
      class="token-line"
      style="color: rgb(118, 217, 230);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo = bar();
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render inline code correctly (snapshot) 1`] = `
<div>
  <code
    class="inline"
  >
    Inline Code
  </code>
</div>
`;
